--- a/models/staging/resource_manager/_source.yml
+++ b/models/staging/resource_manager/_source.yml
@@ -6,9 +6,9 @@ sources:
   database: biztory_demo
   schema: datajam_2022
   tables:
-  - name: assignments
+  - name: resource_manager_assignments
     description: What assignments are to be allocated
-  - name: projects_phases
+  - name: resource_manager_project_phases
     description: Breakdown of different phases of assignments
-  - name: users
+  - name: resource_manager_users
     description: List of team members
